syntax = "proto3";

package todo;

option go_package = "todo-back/infrastructure/handler/grpc/proto_go_gen/todo";

import "google/protobuf/timestamp.proto";
import "user/user.proto";

service TodoRpc {
  rpc List(ListInput) returns (ListOutput) {}
  rpc Get(GetInput) returns (GetOutput) {}
  rpc Create(CreateInput) returns (CreateOutput) {}
  rpc Update(UpdateInput) returns (UpdateOutput) {}
  rpc Delete(DeleteInput) returns (DeleteOutput) {}
}

message TodoFilter {
  optional TodoId id = 1;
  optional string title = 2;
  optional list.FilterKind title_filter_kind = 3;
  optional string description = 4;
  optional list.FilterKind description_filter_kind = 5;
  optional Status status = 6;
}

message TodoSort {
  optional list.SortField create_time = 1;
  optional list.SortField done_time = 2;
}

message ListInput {
  list.Paging paging = 1;
  optional TodoFilter filter = 2;
  optional TodoSort sort = 3;
}

message ListOutput {
  bool has_next = 1;
  repeated Todo todos = 2;
}

message GetInput {}
message GetOutput {}
message CreateInput {}
message CreateOutput {}
message UpdateInput {}
message UpdateOutput {}
message DeleteInput {}
message DeleteOutput {}

message TodoId { string id = 1; }

message CreateTodo {
  string title = 1;
  string description = 2;
  Status status = 3;
}

message UpdateTodo {
  optional string title = 1;
  optional string description = 2;
  optional string status = 3;
}

message Todo {
  TodoId id = 1;
  string title = 2;
  string description = 3;
  Status status = 4;
  user.UserId user_id = 5;
  google.protobuf.Timestamp create_time = 6;
}

enum Status {
  done = 0;
  scheduled = 1;
  draft = 2;
}
